[gd_scene load_steps=5 format=3 uid="uid://rrx4v40ylfty"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_emfa6"]
[ext_resource type="Texture2D" uid="uid://drj3jq87qygpl" path="res://Sprites/scream jam transp.png" id="2_ncn7p"]
[ext_resource type="Texture2D" uid="uid://c4e1purr3ro4b" path="res://Sprites/title.png" id="3_81mki"]
[ext_resource type="Theme" uid="uid://begoq4afaqmfm" path="res://ui_theme.tres" id="4_yx5lv"]

[node name="Node2D" type="Node2D"]

[node name="MainMenu" type="CanvasLayer" parent="." node_paths=PackedStringArray("creditsText", "menuButtons")]
script = ExtResource("1_emfa6")
creditsText = NodePath("Control/credits text")
menuButtons = NodePath("Control/buttons")

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 66.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.88)
texture = ExtResource("2_ncn7p")
expand_mode = 1
stretch_mode = 4

[node name="Title" type="Sprite2D" parent="MainMenu"]
position = Vector2(591, 191)
texture = ExtResource("3_81mki")

[node name="Control" type="Control" parent="MainMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="buttons" type="MarginContainer" parent="MainMenu/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 239.0
offset_top = 79.0
offset_right = 239.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 250

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Control/buttons"]
layout_mode = 2
theme = ExtResource("4_yx5lv")
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="MainMenu/Control/buttons/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "PLAY"

[node name="Quit" type="Button" parent="MainMenu/Control/buttons/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "QUIT"

[node name="Credits" type="Button" parent="MainMenu/Control/buttons/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "CREDITS"

[node name="credits text" type="MarginContainer" parent="MainMenu/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Control/credits text"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="CreditsText" type="RichTextLabel" parent="MainMenu/Control/credits text/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/shadow_outline_size = 18
theme_override_constants/line_separation = 8
theme_override_constants/text_highlight_h_padding = 8
theme_override_constants/text_highlight_v_padding = 8
theme_override_font_sizes/normal_font_size = 50
text = "Credits
Coding
Art
Story
Music"
fit_content = true

[node name="Close" type="Button" parent="MainMenu/Control/credits text/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Close"

[connection signal="pressed" from="MainMenu/Control/buttons/VBoxContainer/Play" to="MainMenu" method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/Control/buttons/VBoxContainer/Play" to="MainMenu" method="_on_button_pressed"]
[connection signal="pressed" from="MainMenu/Control/buttons/VBoxContainer/Quit" to="MainMenu" method="_on_quit_pressed"]
[connection signal="pressed" from="MainMenu/Control/buttons/VBoxContainer/Credits" to="MainMenu" method="_on_credits_pressed"]
[connection signal="pressed" from="MainMenu/Control/credits text/VBoxContainer/Close" to="MainMenu" method="_on_close_credits_pressed"]
